--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
 version: "3.7"
 services:
+  copyto:      
+    ports:
+      - '5000:5000'
+    image: 'copyto:latest'
   db:
     image: mysql:5
     command: mysqld --default-authentication-plugin=mysql_native_password
