--- a/service/CopyToMeService/appsettings.Development.json
+++ b/service/CopyToMeService/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "CopyToMeServiceIdentityDbContextConnection": "Server=db;Database=CopyToMeService;Uid=root;Pwd=copyto.me;"
   }
 }
