--- a/service/CopyToMeService/appsettings.json
+++ b/service/CopyToMeService/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CopyToMeServiceIdentityDbContextConnection": "Server=db;Database=CopyToMeService;Uid=root;Pwd=copyto.me;"
+  }
 }
