--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,9 @@
 version: "3.7"
 services:
   copyto:      
+    build:
+      context: ./
+      dockerfile: ./service/Dockerfile
     ports:
       - '5000:5000'
     image: 'copyto:latest'
