--- a/service/Dockerfile
+++ b/service/Dockerfile
@@ -8,6 +8,7 @@ RUN apt update && \
 RUN apt -y install npm
 RUN npm install npm@latest -g
 
-WORKDIR /source
-COPY . .
+WORKDIR /source/service
+COPY service .
+COPY ui ../ui
 CMD dotnet run --urls https://0.0.0.0:5000 --project CopyToMeService
