--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,11 @@ services:
     build:
       context: ./
       dockerfile: ./service/Dockerfile
-      volumes:
-        "$(AppData)/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro"
     ports:
       - '5000:5000'
+    environment:
+      - AUTHENTICATION__GOOGLE__CLIENTID
+      - AUTHENTICATION__GOOGLE__CLIENTSECRET
     image: 'copyto:latest'
   db:
     image: mysql:5
