--- a/service/Dockerfile
+++ b/service/Dockerfile
@@ -12,4 +12,4 @@ WORKDIR /source/service
 COPY service .
 COPY ui ../ui
 
-CMD dotnet run --urls https://+:5000 --project CopyToMeService
+CMD dotnet watch --project CopyToMeService run --urls https://+:5000 
