--- a/ui/package.json
+++ b/ui/package.json
@@ -26,7 +26,7 @@
     "bootstrap": "^4.3.1",
     "core-js": "^3.3.3",
     "jquery": "3.4.1",
-    "ngx-paypal": "git://github.com/silleknarf/ngx-paypal.git#feature/root-directory-lib",
+    "ngx-paypal": "file:../npm/ngx-paypal/projects/ngx-paypal-lib",
     "oidc-client": "^1.9.1",
     "popper.js": "^1.16.0",
     "rxjs": "^6.5.3",
