--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,18 @@
 version: "3.7"
 services:
-  copyto:      
+  ui:      
+    image: node:10
+    working_dir: /source/ui
+    command: npm run start -- --host 0.0.0.0
+    depends_on:
+      - service
+      - db
+    ports:
+      - '4200:4200'
+    volumes:
+      - ./ui:/source/ui
+      - ./npm:/source/npm
+  service:      
     build:
       context: ./
       dockerfile: ./service/Dockerfile
